adding fav button

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,7 +9,8 @@
         android:id="@+id/imgView_banner"
         android:layout_width="match_parent"
         android:layout_height="175dp"
-        android:layout_marginBottom="@dimen/activity_margin"/>
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:scaleType="centerCrop"/>
 
     <ImageView
         android:id="@+id/img_cover"
@@ -17,14 +18,24 @@
         android:layout_height="225dp"
         android:layout_below="@id/imgView_banner"/>
 
+    <ImageButton
+        android:id="@+id/btn_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:background="@android:color/transparent"
+        android:layout_below="@+id/imgView_banner"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/activity_vertical_margin" />
+
     <TextView
         android:id="@+id/detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/img_cover"
-        android:layout_below="@id/imgView_banner"
         android:textStyle="bold"
-        android:padding="@dimen/activity_margin"/>
+        android:padding="@dimen/activity_margin"
+        android:layout_below="@id/btn_fav"/>
 
     <TextView
         android:id="@+id/detail_rate"
@@ -43,10 +54,19 @@
         android:padding="@dimen/activity_margin"/>
 
     <TextView
+        android:id="@+id/title_overview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Overview"
+        android:layout_below="@id/img_cover"
+        android:padding="@dimen/activity_vertical_margin"
+        android:textSize="20sp"/>
+
+    <TextView
         android:id="@+id/detail_overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_cover"
+        android:layout_below="@id/title_overview"
         android:padding="@dimen/activity_margin"/>
 
 
