--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -14,6 +14,10 @@
             android:id="@+id/nav_search"
             android:icon="@drawable/ic_search_black_24dp"
             android:title="Search" />
+        <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_favorite_black_24dp"
+            android:title="Favourite"/>
     </group>
 
     <!--<item android:title="Preference">-->
