--- a/app/src/main/res/layout/favourite_af.xml
+++ b/app/src/main/res/layout/favourite_af.xml
@@ -1,21 +1,33 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/widget_margin"
-    android:background="#09C" >
+    android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="10">
+        
+        <StackView
+            android:id="@+id/stack_banner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:loopViews="true"
+            android:layout_weight="9"/>
+
+    </LinearLayout>
+    
     <TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/appwidget_text"
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:background="@color/colorAccent"
         android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:background="#09C"/>
-
-</RelativeLayout>
+        android:textStyle="bold"
+        android:text="@string/empty_text"
+        android:textSize="20sp"
+        android:visibility="gone"/>
+    
+</FrameLayout>
