--- a/app/src/main/res/xml/favourite_af_info.xml
+++ b/app/src/main/res/xml/favourite_af_info.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="250dp"
-    android:minHeight="110dp"
-    android:updatePeriodMillis="86400000"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:initialKeyguardLayout="@layout/favourite_af"
     android:initialLayout="@layout/favourite_af"
-    android:widgetCategory="home_screen"
-    android:initialKeyguardLayout="@layout/favourite_af">
-</appwidget-provider>
+    android:minHeight="110dp"
+    android:minWidth="250dp"
+    android:previewImage="@drawable/example_appwidget_preview"
+    android:updatePeriodMillis="0"
+    android:widgetCategory="home_screen"></appwidget-provider>
