--- a/app/src/main/res/layout/favourite_af.xml
+++ b/app/src/main/res/layout/favourite_af.xml
@@ -15,6 +15,20 @@
             android:loopViews="true"
             android:layout_weight="9"/>
 
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/banner_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:text="favorite af"
+            android:textSize="20sp"
+            android:layout_weight="1" />
+
     </LinearLayout>
     
     <TextView
