--- a/app/src/main/res/xml/favourite_af_info.xml
+++ b/app/src/main/res/xml/favourite_af_info.xml
@@ -4,6 +4,6 @@
     android:initialLayout="@layout/favourite_af"
     android:minHeight="110dp"
     android:minWidth="250dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/dicoding_logo"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"></appwidget-provider>
